syntax = "proto3";
option java_package = "no.sysco.middleware.workshops";
message Invoice {
    string id = 1;
    float amount = 2;
    string customerId = 3;
    State state = 4;
}

enum State {
    NEW = 0;
    PAID = 1;
    FAILED = 2;
}

message CreateRequest {
    float amount = 1;
    string customerId = 2;
    State state = 3;
}

message InvoiceRequest {
    string id = 1;
}

message DeleteResponse {
    string id = 1;
    bool ok = 2;
}

message UpdateRequest {
    string id = 1;
    float amount = 2;
}

service InvoiceService {
    rpc Create (CreateRequest) returns (Invoice);
    rpc Get (InvoiceRequest) returns (Invoice);
    rpc Delete (InvoiceRequest) returns (DeleteResponse);
    rpc Update (UpdateRequest) returns (Invoice);
}